Fixed some light CSS issues and moved Layer to make window consistent

--- a/AddData/css/style.css
+++ b/AddData/css/style.css
@@ -1768,6 +1768,13 @@
     
 }
 
+.jimu-widget-addmapdata .added{
+    
+    
+    color:green;
+    
+}
+
 #mapItems {
     overflow-y: scroll;
     max-height: 78%;
